@@ -5,6 +5,8 @@ indicates the contributor was also the author of the fix; Thanks!
 
 * Verilog::Language 3.23**
 
+***	Add vpassert --axiom and --vcs switches.
+
 ****	Pass pin numbers for functions/tasks to SigParser::port_cb.
 
 ****	Fix "disable iff {property_expr}", bug221.  [Rick Ramus]
